Changed website colors, added an additional check for book title to avoid text overflow, tweaked book designs

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Grenze&family=Grenze+Gotisch:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap");
+
 body,
 html {
   margin: 0;
@@ -15,9 +16,10 @@ html {
 
 :root {
   --secondary-color: rgb(255, 255, 255);
-  --header-color: rgb(59, 115, 200);
+  --header-color: rgb(59, 82, 200);
   --sidebar-color: rgb(235, 240, 255);
-  --header-shadow: rgb(37, 90, 169);
+  --header-shadow: rgb(41, 37, 169);
+  --book-color: rgb(87, 106, 231);
   /* --sidebar-color: rgb(255, 239, 235); */
   --main-color: #61636a;
 }
@@ -52,7 +54,7 @@ div {
 
   /* background: red; */
 
-  padding-top: 20px;
+  padding-top: 30px;
   padding-left: 20px;
 }
 
@@ -70,7 +72,7 @@ div {
 
   position: relative;
 
-  background-color: rgb(105, 165, 255);
+  background-color: var(--book-color);
   /* background-color: rgb(255, 83, 3); */
   border: 2px solid rgb(0, 24, 85);
 
@@ -79,8 +81,10 @@ div {
 
   box-shadow: inset 0.2em 0.2em rgb(192, 192, 192),
     inset 0.5em 0.5em rgb(255, 255, 255), inset 0.7em 0.7em rgb(192, 192, 192),
-    inset 0.9em 0.9em rgb(217, 217, 217), inset 1em 1em rgb(0, 24, 85),
-    inset -0.5em 0px rgb(105, 165, 255), inset -0.9em 0px rgb(59, 115, 200);
+    inset 0.9em 0.9em rgb(217, 217, 217),
+    inset -0.5em -0.5em 42px rgba(25, 27, 146, 0.611),
+    inset 1em 1em rgb(0, 24, 85), inset -0.5em 0px var(--book-color),
+    inset -0.9em 0px rgb(23, 18, 164);
 
   /* box-shadow: inset 0.2em 0.2em rgb(192, 192, 192),
     inset 0.5em 0.5em rgb(255, 255, 255), inset 0.7em 0.7em rgb(192, 192, 192),
@@ -112,8 +116,8 @@ div {
 }
 
 .completed.finished {
-  color: #2ba968;
-  background-color: #c2ffbd;
+  color: #078d22;
+  background-color: #92ef8a;
   border: 1.5px solid #2ba968;
 }
 
@@ -124,10 +128,12 @@ div {
 .name {
   font-weight: bold;
   font-size: 1.5rem;
+  max-width: min-content;
+  text-align: center;
 }
 
 .author {
-  color: rgb(48, 55, 121);
+  color: rgb(33, 41, 116);
 }
 
 .pages {
@@ -164,7 +170,7 @@ div {
 .books-title,
 .library-title {
   font-size: 45px;
-  font-family: "Grenze";
+  font-family: "Roberto";
   color: white;
 
   align-self: center;
@@ -213,6 +219,7 @@ div {
   grid-column: 1/1;
 
   background-color: var(--sidebar-color);
+  box-shadow: 2px 2px 5px #b4bbcf;
 }
 
 .status {
